--- a/package.json
+++ b/package.json
@@ -17,16 +17,15 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "typescript": "^4.8.4",
+    "vite-tsconfig-paths": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -47,8 +46,10 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.0"
+    "tailwindcss": "^3.2.0",
+    "vite": "^3.2.3"
   }
 }
