В package json добавил homepage

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "comforty",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://s1i1.github.io/comforty/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
